--- a/src/TailBlazor.NavBar/TailBlazor.NavBar.csproj
+++ b/src/TailBlazor.NavBar/TailBlazor.NavBar.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <PackageId>TailBlazor.NavBar</PackageId>
     <RootNamespace>TailBlazor.NavBar</RootNamespace>
-    <Version>0.0.1</Version>
+    <Version>1.0.0</Version>
     <Authors>Rogerio Ribeiro</Authors>
     <IsPackage>true</IsPackage>
     <PackageTags>Blazor; TailBlazorcss; TailBlazor css; tailwind; tailwindcss; NavBar; navbar; Nav; Nav Bar;</PackageTags>
@@ -30,11 +30,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\..\..\TailBlazor\NavBar\logo.png">
+    <None Include="..\..\logo.png">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
-    <None Include="..\..\..\TailBlazor\NavBar\LICENSE" Pack="true" PackagePath="">
+    <None Include="..\..\LICENSE" Pack="true" PackagePath="">
       <LinkBase>assets</LinkBase>
     </None>
   </ItemGroup>
