missing a mobile class for the logo info

--- a/src/TailBlazor.NavBar/TailBlazor.NavBar.csproj
+++ b/src/TailBlazor.NavBar/TailBlazor.NavBar.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="BlazorPro.BlazorSize" Version="5.0.0-pre" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.3" />
   </ItemGroup>
 
